--- a/crowd_nav/configs/policy.config
+++ b/crowd_nav/configs/policy.config
@@ -50,7 +50,7 @@ with_om = false
 with_global_state = true
 
 [frozen]
-with_pretrained = true
+with_pretrained = false
 frozen_training = false
 model_file = sgan_models/checkpoint_obs4.pt
 obs_len = 4
